[project]
name = "jit"
version = "0.1.0"
description = "Just image Transformer (JiT) for Pixel-space Diffusion"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "numpy>=1.23.5",
    "opencv-python>=4.11.0.86",
    "timm>=0.9.12",
    "tensorboard>=2.10.0",
    "scipy>=1.9.1",
    "einops>=0.8.1",
    "gdown>=5.2.0",
    "datasets",
    "torch-fidelity @ git+https://github.com/LTH14/torch-fidelity.git@master",
]

[tool.uv]
find-links = ["https://download.pytorch.org/whl/cu124"]
